fixed chart label styling, scrollbar was covering, not enough padding

--- a/src/styles/jqplot-chart.less
+++ b/src/styles/jqplot-chart.less
@@ -1,5 +1,6 @@
 .jqplot-chart{
 	position: relative;
+    @xtick_w: 5em;
 
 	> .body-container{
 		@padding: 5px;
@@ -9,13 +10,13 @@
 		bottom: @padding;
 		left: @padding;
 		overflow-y: scroll;
-		overflow-x: visible;
+		overflow-x: hidden;
 
 		.body{
 			position: absolute;
 			top: 0;
 			left: 0;
-			right: 0;
+			right: @xtick_w/2;
 			font-size: 12px;
 			padding: @padding;
 
@@ -35,6 +36,15 @@
 					white-space: nowrap;
 				}
 			}
+
+            .jqplot-xaxis {
+                .jqplot-xaxis-tick {
+                    max-width: @xtick_w;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    white-space: nowrap;
+                }
+            }
 		}
 	}
 }
